2004-12-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/download/fedora.xml:
	  fix up gpg verification

2004-12-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	patch by: Aurelien Mino

	* src/htdocs/bindings/bindings.xml:
	* src/htdocs/dev/index.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/modules/modules.xsl:
	* src/htdocs/tasks/code.xml:
	  change gst-cvs-http and use it everywhere

2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.6.xml:
	  Christian's suggestions

2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/bugzilla:
	  fix script to handle entities
	* bin/www-update:
	* src/htdocs/releases/gst-plugins/0.8.6.xml:
	  repaste bugs

2004-11-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.6.xml:
	  new plugins release

2004-11-04  Owen Fraser-Green  <owen@discobabe.net>

	* src/htdocs/bindings/bindings.xml: Updated gst-sharp info.

2004-10-09  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/releases/gst-ffmpeg/0.8.2.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/news/news.xml:
	  writing release notes for gst-ffmpeg 0.8.2.

2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.7.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  writing release notes for gstreamer 0.8.7

2004-10-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-plugins/0.8.5.xml:
	* src/htdocs/releases/gst-plugins/Makefile.am:
	  writing release notes for gst-plugins 0.8.5

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	  releasing gstreamer 0.8.6

2004-10-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.8.6.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  writing release notes
