@@ -3,7 +3,7 @@
 <release>
   <module>gstreamer</module>
   <module-fancy>GStreamer</module-fancy>
-  <name>NOT YET RELEASED</name>
+  <name>I'll Take Care Of You</name>
   <version>0.8.8</version>
 
   <intro>
@@ -28,6 +28,12 @@ as the core, as long as they are in the 0.8.x series.
     <feature>Parallel installability with 0.6.x series</feature>
     <feature>Internationalization</feature>
 
+    <feature>Threading fixes</feature>
+    <feature>Opt scheduler fixes</feature>
+    <feature>Documentation updates</feature>
+    <feature>New translation: Norwegian Bokmaal (Kjartan Maraas)</feature>
+    <feature>New translation: Italian (Luca Ferretti)</feature>
+    <feature>New scheduler: fair</feature>
   </features>
 
   <applications>
@@ -39,15 +45,109 @@ GNOME applications including sound-juicer, totem and RhythmBox.
   </applications>
 
   <contributors>
+
+	<person>Benjamin Otte</person>
+	<person>Christian Schaller</person>
+	<person>Christophe Fergeau</person>
+	<person>Daniel Gazard</person>
+	<person>David Schleef</person>
+	<person>Edward Hervey</person>
+	<person>Johan Dahlin</person>
+	<person>Luca Ferretti</person>
+	<person>Kjartan Maraas</person>
+	<person>Martin Soto</person>
+	<person>Matt Kraai</person>
+	<person>Ronald Bultje</person>
+	<person>Sebastien Cote</person>
+	<person>Stefan Kost</person>
+	<person>Stephane Loeuillet</person>
+	<person>Steve Lhomme</person>
+	<person>Thomas Vander Stichele</person>
+        <person>William Jon McCann</person>
+        <person>Wim Taymans</person>
+        <person>Zaheer Abbas Merali</person>
+
   </contributors>
 
   <api>
     <additions>
       <item>A new function, gst_plugin_get_version, has been added.</item>
     </additions>
+<!--
     <depreciations>
     </depreciations>
+-->
   </api>
 
+  <bugs>
+    <bug>
+      <id>144804</id>
+      <summary>opt scheduler breaks on playing a pipeline</summary>
+    </bug>
+    <bug>
+      <id>148787</id>
+      <summary>clocks are not distributed correctly</summary>
+    </bug>
+    <bug>
+      <id>149936</id>
+      <summary>[PATCH] [build] GStreamer without registry support do not...</summary>
+    </bug>
+    <bug>
+      <id>150051</id>
+      <summary>fakesrc needs a data rate parameter that timestamps the d...</summary>
+    </bug>
+    <bug>
+      <id>151605</id>
+      <summary>impossible to play .mpg or avi files with gst-launch-ext</summary>
+    </bug>
+    <bug>
+      <id>153882</id>
+      <summary>[PATCH] The win32 version of gstenumtypes is not up to date</summary>
+    </bug>
+    <bug>
+      <id>154061</id>
+      <summary>optimal scheduler doesn't get freed</summary>
+    </bug>
+    <bug>
+      <id>156063</id>
+      <summary>infinite loop and 100% CPU with some MP3</summary>
+    </bug>
+    <bug>
+      <id>156179</id>
+      <summary>gstreamer typefind plugin information from gst-inspect is...</summary>
+    </bug>
+    <bug>
+      <id>157127</id>
+      <summary>Cleanup of issues reported by sparse</summary>
+    </bug>
+    <bug>
+      <id>157263</id>
+      <summary>use G_SIGNAL_TYPE_STATIC_SCOPE for GstBuffers in handoff ...</summary>
+    </bug>
+    <bug>
+      <id>158018</id>
+      <summary>gstreamer typefind stalls on these JPEG files</summary>
+    </bug>
+    <bug>
+      <id>158162</id>
+      <summary>opt deadlock</summary>
+    </bug>
+    <bug>
+      <id>158163</id>
+      <summary>[api] Problem querying on ghostpads</summary>
+    </bug>
+    <bug>
+      <id>159852</id>
+      <summary>[PATCH] [api] g_signal_emit thread safety issues</summary>
+    </bug>
+    <bug>
+      <id>160019</id>
+      <summary>segfault when error occurs playback of uri containing per...</summary>
+    </bug>
+    <bug>
+      <id>160220</id>
+      <summary>gst_pad_set_explicit_caps of a NULL caps doesn't work</summary>
+    </bug>
+  </bugs>
 
 </release>
